--- a/seminar-management-system/dockerfile
+++ b/seminar-management-system/dockerfile
@@ -1,8 +1,17 @@
 # syntax=docker/dockerfile:1
 
 FROM node:22-alpine
+
 WORKDIR /app
-COPY . .
+
+COPY package*.json ./
+
 RUN npm install
+
+COPY . .
+
+RUN npm run build
+
 EXPOSE 3000
+
 CMD [ "npm", "run", "dev" ]
