--- a/seminar-management-system/package.json
+++ b/seminar-management-system/package.json
@@ -10,14 +10,18 @@
     "commit": "cz"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
     "mongoose": "^8.6.2",
     "next": "14.2.11",
+    "next-auth": "^5.0.0-beta.3",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-modal": "^3.16.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
